--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ node_js:
   - "5"
   - "6"
 script:
-  - npm run lint
-  - npm run test
   - npm run clean
   - npm run build
+  - npm run lint
+  - npm run test:cov
 after_script:
   - coveralls < ./coverage/lcov.info
 branches:
