--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepublish": "npm run clean && npm run build && npm run lint && npm run test"
   },
   "devDependencies": {
+    "babel-cli": "^6.23.0",
     "babel-core": "^6.13.2",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
