--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clean:cov": "rimraf ./coverage",
     "lint": "eslint . --ext .js",
     "lint:fix": "npm run lint -- --fix",
+    "coveralls": "coveralls < ./coverage/lcov.info",
     "prepublish": "npm run clean && npm run build && npm run lint && npm run test"
   },
   "devDependencies": {
