--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ script:
   - npm run clean
   - npm run build
   - npm run lint
-  - npm run test:cov
+  - npm run test:cover
 after_script:
-  - npm run coveralls
+  - npm run test:report
 branches:
   only:
     - master
