--- a/docs/package.json
+++ b/docs/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-cli": "^1.0.2",
+    "hexo-deployer-git": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.11",
     "hexo-renderer-scss": "^1.0.2",
