--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:watch": "npm run test -- --watch",
     "test:cover": "istanbul cover ./node_modules/mocha/bin/_mocha -- --compilers js:babel-register --recursive",
     "test:report": "coveralls < ./coverage/lcov.info",
-    "clean": "npm run clean:lib && npm run clean:dist && npm run clean:cov",
+    "clean": "npm run clean:lib && npm run clean:dist && npm run clean:cover",
     "clean:lib": "rimraf ./lib",
     "clean:dist": "rimraf ./dist",
     "clean:cover": "rimraf ./coverage",
