--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-core": "^6.13.2",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.16.0",
